--- a/public/main.css
+++ b/public/main.css
@@ -1,23 +1,49 @@
 .product {
-    display: flex;
-    padding: 10px;
-  }
-  .thumbnail {
-    max-width: 200px;
-    width: 100%;
-    border-radius: 10px;
-    background-size: cover;
-    background-position: center;
-  }
-  .product .price {
-    font-size: 16px;
-    font-weight: 600;
-  }
-  .product .title {
-    font-size: 17px;
-    font-weight: 600;
-  }
-  .product .date {
-    color: grey;
-    font-size: 13px;
-  }
+  display: flex;
+  padding: 10px;
+}
+.thumbnail {
+  max-width: 200px;
+  width: 100%;
+  border-radius: 10px;
+  background-size: cover;
+  background-position: center;
+}
+.product .price {
+  font-size: 16px;
+  font-weight: 600;
+}
+.product .title {
+  font-size: 17px;
+  font-weight: 600;
+}
+.product .date {
+  color: grey;
+  font-size: 13px;
+}
+
+.box  {
+  align-items: center;
+  align-self: center;
+  align-content: center;
+  margin-left: 35%;
+} 
+/* .user .profile {
+  display: block;
+  width: 20px;
+  height: 20px;
+} */
+.user .profile{
+  border-radius: 50px;
+}
+
+.detailimg{
+  margin-top: 30px;
+}
+.price {
+  font-size: 25px;
+}
+.content{
+  font-size: 20px;
+  margin-top: 60px;
+}
