로그아웃기능

--- a/public/chat.css
+++ b/public/chat.css
@@ -128,7 +128,7 @@ html {
   left: 0;
   width: 4rem;
   height: 100%;
-  background-color: #d1d1d1;
+  background-color: #000000;
 }
 
 #chat-room .input-box .btn-plus > i {
