--- a/public/main.css
+++ b/public/main.css
@@ -22,23 +22,23 @@
   font-size: 13px;
 }
 
-.box  {
+.box {
   align-items: center;
   align-self: center;
   align-content: center;
-  margin-left: 34%
-} 
+  margin-left: 34%;
+}
 
-.user .profile{
+.user .profile {
   border-radius: 50px;
 }
 
-.detailimg{
+.detailimg {
   margin-top: 30px;
 }
 .price {
   font-size: 25px;
 }
-.content{
+.content {
   margin-top: 60px;
 }
